show abstract in app window